--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,8 @@
   --Seashell: #F8EDEB;
   --ChampagnePink:#F9DCC4;
   --Peach:#FEC89A;
-};
+  --font-family: "Lexend", sans-serif;
+}
 
 h1{
   color: var(--Melon);
