--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,12 +1,143 @@
-:root{
+:root {
   --Melon: #FFB5A7;
-  --PaleDogwood:#FCD5CE;
+  --PaleDogwood: #FCD5CE;
   --Seashell: #F8EDEB;
-  --ChampagnePink:#F9DCC4;
-  --Peach:#FEC89A;
-  --font-family: "Lexend", sans-serif;
+  --ChampagnePink: #F9DCC4;
+  --Peach: #FEC89A;
+  font-family: "Lexend", sans-serif;
+
 }
 
-h1{
-  color: var(--Melon);
+header,
+main {
+  padding-inline: 10rem;
+
+}
+
+/************************* NAVBAR *************************/
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border-bottom: 1px solid var(--ChampagnePink);
+  padding: 1rem 3rem 1rem 3rem;
+  gap: 1rem;
+
+  button {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    background-color: var(--Melon);
+    font-family: "Lexend", sans-serif;
+    border: none;
+    border-radius: 20px;
+    padding: .8rem;
+    font-weight: 700;
+    cursor: pointer;
+
+  }
+}
+
+nav>a:first-of-type {
+  margin-right: auto;
+  justify-self: flex-start;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+/************************* HEADER *************************/
+
+header {
+  background-color: var(--Melon);
+  height: 80vh;
+}
+
+/************************* HOME *************************/
+
+.main-home {
+  display: grid;
+  justify-content: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+section {
+  display: grid;
+  grid-auto-rows: min-content;
+  gap: 1rem;
+}
+
+section button {
+  width: max-content;
+  background-color: var(--Melon);
+  font-family: "Lexend", sans-serif;
+  border: none;
+  border-radius: 20px;
+  padding: .8rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+/************************* CARDS *************************/
+
+.section-cards {
+  display: grid;
+  grid-template-columns: min-content min-content;
+  gap: 2rem;
+
+}
+
+.section-cards> :nth-child(2) {
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+  text-align: left;
+
+}
+
+.text-cards {
+  width: 200px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 2px solid var(--ChampagnePink);
+  padding: 1rem;
+  border-radius: 10px;
+
+  h3 {
+    margin: 0;
+  }
+
+  p {
+    color: #5f5f5f
+  }
+}
+
+
+.text-cards svg {
+  position: absolute;
+  top: 10px;
+}
+
+/************************* MAP *************************/
+
+article{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+  background-color: var(--PaleDogwood);
+}
+
+/************************* FOOTER*************************/
+
+footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10rem;
 }
