--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,103 @@
   --font-family: "Lexend", sans-serif;
 }
 
-h1{
-  color: var(--Melon);
+
+
+
+/*Css de CreatePost.jsx*/
+.container {
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
+  font-family: "Lexend", sans-serif;
+}
+
+h1 {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  padding-top: 50px;
+}
+
+.information1 {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 25px;
+  padding-top: 10px;
+  
+}
+.information2 {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 40px;
+  
+}
+
+input,select,textarea {
+  gap: 30px;
+  padding: 12px;
+  border: none;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  font-size: 14px;
+}
+
+select {
+  min-width: 195px;
+}
+
+.photo {
+  display: flex;
+  gap: 10px;
+  padding-bottom: 30px;
+  align-items: center;
+  margin-bottom: 15px;
+  
+}
+
+.photo input {
+  flex: .7;
+}
+.file-upload{
+  background-color: #f1f1f1;
+  padding: 12px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+.photo button {
+  padding: 10px 15px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 999px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.description label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+}
+
+textarea {
+  width: 100%;
+  resize: vertical;
+}
+
+.btn-submit {
+  width: 40%;
+  padding: 14px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 999px;
+  font-size: 16px;
+  cursor: pointer;
 }
