--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,19 +23,21 @@ nav {
   padding: 1rem 3rem 1rem 3rem;
   gap: 1rem;
 
-  button {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    background-color: var(--Melon);
-    font-family: "Lexend", sans-serif;
-    border: none;
-    border-radius: 20px;
-    padding: .8rem;
-    font-weight: 700;
-    cursor: pointer;
 
-  }
+}
+
+nav>button {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  background-color: var(--Melon);
+  font-family: "Lexend", sans-serif;
+  border: none;
+  border-radius: 20px;
+  padding: .8rem;
+  font-weight: 700;
+  cursor: pointer;
+
 }
 
 nav>a:first-of-type {
@@ -46,11 +48,81 @@ nav>a:first-of-type {
   gap: 1rem;
 }
 
+/************************* MODAL LOGIN *************************/
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.482);
+
+}
+
+dialog {
+  text-align: left;
+  border-color: var(--PaleDogwood);
+  border-radius: 15px;
+  padding: 2rem;
+
+  h1 {
+    padding: 0;
+    margin-top: 0;
+  }
+
+
+}
+
+dialog>button {
+  background-color: transparent;
+  border: none;
+  justify-self: flex-end;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  p {
+    font-size: .8rem;
+    margin: 0;
+  }
+}
+
+.login-form>button {
+  text-align: center;
+  background-color: var(--Melon);
+  font-family: "Lexend", sans-serif;
+  border: none;
+  border-radius: 20px;
+  padding: .8rem;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+
 /************************* HEADER *************************/
 
 header {
   background-color: var(--Melon);
   height: 80vh;
+
+}
+
+header div {
+  display: flex;
+  height: 100%;
+  gap: 2rem;
+  padding: 1rem;
+  box-sizing: border-box;
+
+  h1 {
+    font-size: 5rem;
+    color: black;
+  }
+}
+
+header div img {
+  height: 100%;
 }
 
 /************************* HOME *************************/
@@ -125,32 +197,41 @@ section button {
 
 /************************* MAP *************************/
 
-article{
+article {
   display: grid;
+  grid-auto-flow: column;
+  gap: 2rem;
   justify-content: center;
   align-items: center;
   height: 70vh;
   background-color: var(--PaleDogwood);
 }
 
+.map {
+  height: 400px;
+  width: 400px;
+  border: solid 1px var(--Melon);
+}
+
 /************************* FOOTER*************************/
 
-footer{
+footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 10rem;
 }
-.rrss{
+
+.rrss {
   display: flex;
   gap: 1rem;
 
-  svg{
+  svg {
     cursor: pointer;
   }
 }
-  
+
 
 
 
@@ -175,8 +256,9 @@ h1 {
   gap: 30px;
   margin-bottom: 25px;
   padding-top: 10px;
-  
+
 }
+
 .information2 {
   display: flex;
   align-items: center;
@@ -184,10 +266,12 @@ h1 {
   margin-bottom: 15px;
   padding-top: 30px;
   padding-bottom: 40px;
-  
+
 }
 
-input,select,textarea {
+input,
+select,
+textarea {
   gap: 30px;
   padding: 12px;
   border: none;
@@ -206,13 +290,14 @@ select {
   padding-bottom: 30px;
   align-items: center;
   margin-bottom: 15px;
-  
+
 }
 
 .photo input {
   flex: .7;
 }
-.file-upload{
+
+.file-upload {
   background-color: #f1f1f1;
   padding: 12px;
   border-radius: 10px;
@@ -220,6 +305,7 @@ select {
   display: flex;
   align-items: center;
 }
+
 .photo button {
   padding: 10px 15px;
   background-color: black;
