--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,6 @@
 
 }
 
-header,
 main {
   padding-inline: 10rem;
 
@@ -105,39 +104,67 @@ dialog>button {
 header {
   background-color: var(--Melon);
   height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 2rem;
+  justify-content: center;
+  padding-inline: 1rem;
+
+
+  div {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
 }
 
-header div {
-  display: flex;
-  height: 100%;
-  gap: 2rem;
-  padding: 1rem;
-  box-sizing: border-box;
 
-  h1 {
-    font-size: 5rem;
-    color: black;
-  }
+header h1 {
+  font-size: clamp(2rem, 7vw, 4rem);
+  color: black;
+  margin: 0;
+
 }
 
 header div img {
-  height: 100%;
+  max-width: 100%;
+  max-height: 80vh;
+
 }
 
 /************************* HOME *************************/
 
 .main-home {
-  display: grid;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
 section {
-  display: grid;
-  grid-auto-rows: min-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   gap: 1rem;
+
+}
+
+section > div{
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+
+}
+
+section img{
+  height: 100%;
+  max-width: 400px;
+
+
 }
 
 section button {
@@ -153,14 +180,8 @@ section button {
 
 /************************* CARDS *************************/
 
-.section-cards {
-  display: grid;
-  grid-template-columns: min-content min-content;
-  gap: 2rem;
 
-}
-
-.section-cards> :nth-child(2) {
+.section-cards{
 
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -170,8 +191,8 @@ section button {
 
 }
 
-.text-cards {
-  width: 200px;
+
+.cards {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -179,6 +200,7 @@ section button {
   border: 2px solid var(--ChampagnePink);
   padding: 1rem;
   border-radius: 10px;
+  min-width: 170px;
 
   h3 {
     margin: 0;
@@ -190,7 +212,7 @@ section button {
 }
 
 
-.text-cards svg {
+.cards svg {
   position: absolute;
   top: 10px;
 }
@@ -339,9 +361,35 @@ select {
   font-size: 16px;
   cursor: pointer;
 }
-.btn1{
+
+.btn1 {
   display: flex;
   justify-content: center;
   padding-top: 50px;
-  
+
+}
+
+
+
+@media (max-width: 960px) {
+  main{
+    padding: 2rem;
+  }
+  .section-cards{
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+  }
+  .cards{
+    min-width:fit-content;
+    padding-top: 2rem;
+  }
+  .cards:last-child{
+    display:none;
+  }
+  section img{
+    height: auto;
+    max-width: 30vw;
+    object-fit: cover;
+    object-position: center;
+  }
 }
