--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,9 +36,9 @@ nav>button {
   padding: .8rem;
   font-weight: 700;
   cursor: pointer;
- 
 
-  &:hover{
+
+  &:hover {
     background-color: var(--ChampagnePink);
 
   }
@@ -84,7 +84,8 @@ dialog>button {
   justify-self: flex-end;
   margin-left: auto;
   cursor: pointer;
-  &:hover{
+
+  &:hover {
     background-color: var(--ChampagnePink);
 
   }
@@ -111,7 +112,8 @@ dialog>button {
   padding: .8rem;
   font-weight: 700;
   cursor: pointer;
-  &:hover{
+
+  &:hover {
     background-color: var(--ChampagnePink);
 
   }
@@ -126,8 +128,8 @@ dialog>button {
 
 }
 
-.modal-pic{
-   width: 100px;
+.modal-pic {
+  width: 100px;
   height: 100px;
   object-fit: cover;
   display: block;
@@ -136,7 +138,7 @@ dialog>button {
 
 /************************* HEADER *************************/
 
-header {
+.header-home {
   background-color: var(--Melon);
   height: 80vh;
   padding-inline: 2rem;
@@ -259,7 +261,8 @@ section button {
   padding: .8rem;
   font-weight: 700;
   cursor: pointer;
-  &:hover{
+
+  &:hover {
     background-color: var(--ChampagnePink);
 
   }
@@ -315,15 +318,18 @@ article {
   height: 70vh;
   background-color: var(--PaleDogwood);
 }
-.info h4{
+
+.info h4 {
   display: flex;
   flex-direction: column;
   font-size: 3rem;
 }
-.info p{
+
+.info p {
   display: flex;
   gap: 1rem;
 }
+
 .map {
   height: 400px;
   width: 400px;
@@ -467,7 +473,7 @@ select {
 
 
 @media (max-width: 960px) {
-  main {
+  .main-home {
     padding: 2rem;
   }
 
@@ -569,4 +575,60 @@ select {
 .checkbox input[type="checkbox"] {
   width: 20px;
   height: 20px;
+}
+
+/************************* STAFF *************************/
+.main-staff {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: var(--Seashell);
+  gap: 1rem;
+  padding: 2rem 0 0 0;
+  padding-bottom: 2rem;
+
+  &>p {
+    margin: 0;
+  }
+
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 0;
+  }
+
+  h3 {
+    font-size: 2rem;
+    
+  }
+
+  button {
+    text-align: center;
+    background-color: var(--Melon);
+    font-family: "Lexend", sans-serif;
+    border: none;
+    border-radius: 20px;
+    padding: .8rem;
+    font-weight: 700;
+    cursor: pointer;
+    width: fit-content;
+    margin: auto;
+
+    &:hover {
+      background-color: var(--ChampagnePink);
+
+    }
+
+  }
+}
+
+.container-staff {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.staff-pictures{
+  width: min-content;
 }
