--- a/client/src/App.css
+++ b/client/src/App.css
@@ -234,9 +234,18 @@ section {
 }
 
 section>div {
-  display: flex;
-  width: 100%;
+  display: flex;   
   gap: 2rem;
+  height: min-content;
+  
+
+}
+
+section img {
+  display: block;
+  height: 100%;
+  max-width: 400px;
+  border-radius: 10px;
 
 }
 
@@ -244,13 +253,6 @@ section:nth-child(2)>div {
   flex-direction: row-reverse;
 }
 
-section img {
-  height: 100%;
-  max-width: 400px;
-  border-radius: 10px;
-
-
-}
 
 section button {
   width: max-content;
@@ -278,6 +280,9 @@ section button {
   grid-template-rows: 1fr 1fr;
   gap: 1rem;
   text-align: left;
+  height: min-content;
+  align-items: stretch;
+  
 
 }
 
@@ -286,18 +291,21 @@ section button {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   border: 2px solid var(--ChampagnePink);
-  padding: 1rem;
+  padding: 3rem 1rem 1rem 1rem;
   border-radius: 10px;
   min-width: 170px;
+  max-width: 250px;
+  
 
   h3 {
     margin: 0;
   }
 
   p {
-    color: #5f5f5f
+    color: #5f5f5f;
+    
   }
 }
 
@@ -472,32 +480,7 @@ select {
 
 
 
-@media (max-width: 960px) {
-  .main-home {
-    padding: 2rem;
-  }
 
-  .section-cards {
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: 1fr;
-  }
-
-  .cards {
-    min-width: fit-content;
-    padding-top: 2rem;
-  }
-
-  .cards:last-child {
-    display: none;
-  }
-
-  section img {
-    height: auto;
-    max-width: 30vw;
-    object-fit: cover;
-    object-position: center;
-  }
-}
 
 /****************ADOPTIONFORM*********************/
 
@@ -677,6 +660,11 @@ select {
 
     }
   }
+  h1{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 
 }
 
@@ -685,4 +673,75 @@ select {
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
 
+}
+.input-group{
+  display: flex;
+  flex-direction: column;
+  p{
+    margin: .3rem;
+  }
+
+}
+.input-group:last-of-type{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-sizing: border-box;
+  padding-left: 1rem;
+  background-color: #f1f1f1;
+  border-radius: 10px;
+  cursor: pointer;
+
+  span{
+    margin-left: .8rem;
+    font-size: 14px;
+  }
+}
+
+
+/************************* REGISTER *************************/
+
+.pet-main{
+  display: flex;
+  justify-content:center ;
+  gap: 3rem;
+  padding: 4rem;
+  background-color: var(--Seashell);
+  
+}
+
+
+
+
+
+
+
+
+/************************* MEDIAQUERIES *************************/
+
+@media (max-width: 960px) {
+  .main-home {
+    padding: 2rem;
+  }
+
+  .section-cards {
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+  }
+
+  .cards {
+    min-width: fit-content;
+    padding-top: 2rem;
+  }
+
+  .cards:last-child {
+    display: none;
+  }
+
+  section img {
+    height: auto;
+    max-width: 30vw;
+    object-fit: cover;
+    object-position: center;
+  }
 }
