--- a/client/src/App.css
+++ b/client/src/App.css
@@ -144,10 +144,11 @@ dialog {
 .header-home {
   background-color: var(--Melon);
   height: 80dvh;
-  padding-inline: 2rem;
   position: relative;
   overflow: hidden;
   display: flex;
+  align-items: center;
+  padding-top: 2rem;
 
 }
 
@@ -183,15 +184,15 @@ dialog {
   gap: 2rem;
   justify-content: center;
   transition: transform 0.6s ease;
+  box-sizing: border-box;
+  padding-inline: 2rem;
 
+}
 
-  div {
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
+.slide-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .slides h1 {
@@ -207,7 +208,7 @@ dialog {
 }
 
 
-.slides div img {
+.slide-image-container img {
 
   max-height: 80vh;
 
@@ -236,7 +237,7 @@ dialog {
   align-items: stretch;
   gap: 2rem;
   position: relative;
-    margin-bottom: 5rem;
+  margin-bottom: 5rem;
 
 }
 
@@ -305,13 +306,13 @@ dialog {
 
 /************************* MAP *************************/
 
-article {
+.map-container {
   display: grid;
   grid-auto-flow: column;
   gap: 3rem;
   justify-content: center;
+  padding: 5rem 2rem 5rem 2rem;
   align-items: center;
-  height: 70vh;
   background-color: var(--PaleDogwood);
   margin-top: 4rem;
 }
@@ -874,15 +875,21 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-inline: 2rem;
 }
 
 .voluntary-img {
   display: flex;
+ width: 100%;
   height: 100%;
+}
+.voluntary-img img{
+  width: auto;
+ height: 100%;
 }
 
 .voluntary-title h1 {
-  width: 15ch;
+  max-width: 15ch;
   font-size: clamp(2rem, 7vw, 4rem);
 }
 
@@ -895,6 +902,7 @@ select {
   gap: 1rem;
   text-align: center;
   margin-top: 4rem;
+
 }
 
 .main-voluntary>h2 {
@@ -905,6 +913,7 @@ select {
   display: flex;
   gap: 2rem;
   justify-content: center;
+    padding-inline: 2rem;
 }
 
 .voluntary-form-section {
@@ -919,7 +928,7 @@ select {
   background-color: var(--Melon);
 }
 
-.voluntary-form-text h2 {
+.voluntary-form-section h2 {
   font-size: 2.5rem;
   width: 15ch;
   margin: 0;
@@ -964,12 +973,4 @@ select {
   font-family: "Lexend", sans-serif;
 
 }
-
-.voluntary-form-text {
-  display: flex;
-  flex-direction: column;
-}
-
-
-
 
