Queries Staff + nuevas fotos

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -724,7 +724,7 @@ select {
   text-align: center;
   background-color: var(--Seashell);
   gap: 1rem;
-  padding: 2rem 0 0 0;
+  padding: 2rem;
   padding-bottom: 2rem;
   border-top: solid 1px var(--PaleDogwood);
   border-bottom: solid 1px var(--PaleDogwood);
@@ -759,7 +759,11 @@ select {
 }
 
 .staff-pictures {
-  width: min-content;
+  width: 100%;
+}
+.staff-pictures img{
+  width: 100%;
+  border-radius: 10px;
 }
 
 /************************* REGISTER *************************/
@@ -875,7 +879,8 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-inline: 2rem;
+  padding: 2rem;
+  box-sizing: border-box;
 }
 
 .voluntary-img {
