--- a/client/src/AppQueries.css
+++ b/client/src/AppQueries.css
@@ -64,38 +64,51 @@
     }
 
     /************************* REGISTER *************************/
-      .main-register{
+    .main-register {
         height: auto;
-     }
-    .register-image{
+    }
+
+    .register-image {
         display: none;
     }
-        /************************* VOLUNTARY*************************/
-        .voluntary-cards{
-            flex-direction: column;
-        }
-        .voluntary-cards .cards{
-            max-width:none;
-        }
-        .voluntary-cards .cards:last-child{
-            display: flex;
-        }
-        .voluntary-form-section{
-            flex-direction: column;
-            text-align: center;
-            padding-inline: 2rem;
-            box-sizing: border-box;
-          
-        }
-        .voluntary-form-section h2 {
-            width:auto;
-            margin: auto;
-        }
-        .voluntary-form-section textarea {
-            box-sizing: border-box;
-            width: 100%;
-        }
-    
+
+    /************************* VOLUNTARY*************************/
+    .voluntary-cards {
+        flex-direction: column;
+    }
+
+    .voluntary-cards .cards {
+        max-width: none;
+    }
+
+    .voluntary-cards .cards:last-child {
+        display: flex;
+    }
+
+    .voluntary-form-section {
+        flex-direction: column;
+        text-align: center;
+        padding-inline: 2rem;
+        box-sizing: border-box;
+
+    }
+
+    .voluntary-form-section h2 {
+        width: auto;
+        margin: auto;
+    }
+
+    .voluntary-form-section textarea {
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    /************************* STAFF *************************/
+
+    .staff-pictures h2 {
+        height: 60px;
+    }
+
 }
 
 /************************* SMALL *************************/
@@ -119,28 +132,56 @@
 
     }
 
-     /************************* MAIN *************************/
+    /************************* MAIN *************************/
 
-     .main-pictures{
+    .main-pictures {
         display: none;
-     }
-     /************************* REGISTER *************************/
-    
-     .main-register{
+    }
+
+    /************************* REGISTER *************************/
+
+    .main-register {
         height: auto;
-     }
-     .form-container{
+    }
+
+    .form-container {
         padding: 2rem;
         text-align: center;
-     }
-     .form-container h1{
-        flex-direction:column-reverse;
-     }
-     .register-form{
-        grid-template-columns: 1fr;
-     }
+    }
 
-      .header-voluntary {
+    .form-container h1 {
+        flex-direction: column-reverse;
+    }
+
+    .register-form {
+        grid-template-columns: 1fr;
+    }
+
+    .header-voluntary {
         text-align: center;
     }
+
+    /************************* STAFF *************************/
+    .container-staff {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .staff-pictures {
+
+        overflow: hidden;
+    }
+
+    .staff-pictures img {
+        aspect-ratio: 1/1;
+        object-fit: cover;
+        object-position: top;
+    }
+     .staff-pictures h2 {
+        height: unset;
+    }
+    .main-staff .melon-button{
+        width: 100%;
+    }
+
 }
