--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   --ChampagnePink: #F9DCC4;
   --Peach: #FEC89A;
   font-family: "Lexend", sans-serif;
+  color: rgb(31, 31, 31);
 
 }
 
@@ -29,8 +30,7 @@
 
 /************************* NAVBAR *************************/
 nav {
-  position: sticky;
-  top: 0;
+
   z-index: 100;
   display: flex;
   align-items: center;
@@ -38,7 +38,6 @@ nav {
   padding: 1rem 3rem 1rem 3rem;
   gap: 1rem;
   background-color: white;
-  border-bottom: 1px solid var(--Melon);
 
 
 }
@@ -706,9 +705,9 @@ select {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: var(--Seashell);
   padding: 5rem;
   box-sizing: border-box;
+  background: linear-gradient(135deg, var(--ChampagnePink), var(--Melon));
 
   h1 {
     margin: 0;
@@ -726,9 +725,8 @@ select {
 .filtrer select {
   padding: 8px 10px;
   font-size: 15px;
-  border: 2px solid var(--ChampagnePink);
+  border: none;
   border-radius: 8px;
-  background-color: var(--PaleDogwood);
   width: 100px;
   cursor: pointer;
   font-family: "Lexend", sans-serif;
@@ -746,20 +744,25 @@ select {
 
 .card {
   width: 230px;
-  border: 1px solid var(--ChampagnePink);
   border-radius: 15px;
   background-color: white;
   cursor: pointer;
+  background-color: hsl( from var(--ChampagnePink) 400 s 90);
+  overflow: hidden;
+  padding: .5rem;
 
+  span{
+    color: #555;
+  }
 }
 
 
 .img img {
   width: 100%;
   height: 185px;
-  border-radius: 10px;
   object-fit: cover;
   display: block;
+  border-radius: 15px;
 }
 
 
@@ -769,6 +772,7 @@ select {
 
 .cardInfo h3 {
   margin-bottom: 10px;
+  color: hsl(from var(--Melon) h 80 70);
 }
 
 .cardInfo p {
